--- a/Opengl1/opengl1.vcxproj
+++ b/Opengl1/opengl1.vcxproj
@@ -94,91 +94,95 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Header Files\Components\Components.h" />
-    <ClInclude Include="Header Files\Rendering\DepthFrameBuffer.h" />
     <ClInclude Include="Header Files\Assets\Asset.h" />
     <ClInclude Include="Header Files\Assets\AssetArray.h" />
     <ClInclude Include="Header Files\Assets\AssetManager.h" />
     <ClInclude Include="Header Files\Assets\ShaderManager.h" />
     <ClInclude Include="Header Files\Components\Behaviour\Behaviour.h" />
     <ClInclude Include="Header Files\Components\Behaviour\BehaviourComponent.h" />
-    <ClInclude Include="Header Files\Rendering\Camera.h" />
-    <ClInclude Include="Header Files\Rendering\DeferredRendererFragmentBuffer.h" />
-    <ClInclude Include="Header Files\Rendering\DisplacementMap.h" />
-    <ClInclude Include="Header Files\Core\Editor\EditorUI.h" />
-    <ClInclude Include="Header Files\Core\Scene.h" />
-    <ClInclude Include="Header Files\Core\Engine.h" />
-    <ClInclude Include="Header Files\Math\EngineMath.h" />
-    <ClInclude Include="Header Files\Math\EngineMathConstants.h" />
-    <ClInclude Include="Header Files\Rendering\FrameBuffer.h" />
-    <ClInclude Include="Header Files\Math\GlmMath.h" />
-    <ClInclude Include="Header Files\Core\Input.h" />
+    <ClInclude Include="Header Files\Components\Components.h" />
+    <ClInclude Include="Header Files\Components\EntityDescriptor.h" />
     <ClInclude Include="Header Files\Components\Lighting\Lights.h" />
-    <ClInclude Include="Header Files\Core\Log\Log.h" />
+    <ClInclude Include="Header Files\Components\Physics\RigidBody3D.h" />
     <ClInclude Include="Header Files\Components\Rendering\Material.h" />
     <ClInclude Include="Header Files\Components\Rendering\Mesh.h" />
-    <ClInclude Include="Header Files\Rendering\MeshInstance.h" />
-    <ClInclude Include="Header Files\Rendering\Model.h" />
+    <ClInclude Include="Header Files\Components\Rendering\Transform.h" />
+    <ClInclude Include="Header Files\Core\Editor\EditorUI.h" />
+    <ClInclude Include="Header Files\Core\Editor\EntityDescriptionSystem.h" />
+    <ClInclude Include="Header Files\Core\Engine.h" />
+    <ClInclude Include="Header Files\Core\Input.h" />
+    <ClInclude Include="Header Files\Core\Log\Log.h" />
+    <ClInclude Include="Header Files\Core\Scene.h" />
+    <ClInclude Include="Header Files\Core\Window.h" />
+    <ClInclude Include="Header Files\Math\EngineMath.h" />
+    <ClInclude Include="Header Files\Math\EngineMathConstants.h" />
+    <ClInclude Include="Header Files\Math\GlmMath.h" />
+    <ClInclude Include="Header Files\Math\Quaternion.h" />
+    <ClInclude Include="Header Files\Misc\StopWatch.h" />
+    <ClInclude Include="Header Files\Misc\temp.h" />
     <ClInclude Include="Header Files\Physics\ColliderShape.h" />
     <ClInclude Include="Header Files\Physics\Physics.h" />
-    <ClInclude Include="Header Files\Components\Physics\RigidBody3D.h" />
-    <ClInclude Include="Header Files\Math\Quaternion.h" />
+    <ClInclude Include="Header Files\Physics\System\RigidBodySystem.h" />
+    <ClInclude Include="Header Files\Rendering\Camera.h" />
+    <ClInclude Include="Header Files\Rendering\DeferredRendererFragmentBuffer.h" />
+    <ClInclude Include="Header Files\Rendering\DepthFrameBuffer.h" />
+    <ClInclude Include="Header Files\Rendering\DisplacementMap.h" />
+    <ClInclude Include="Header Files\Rendering\FrameBuffer.h" />
+    <ClInclude Include="Header Files\Rendering\MeshInstance.h" />
+    <ClInclude Include="Header Files\Rendering\Model.h" />
     <ClInclude Include="Header Files\Rendering\Shader.h" />
-    <ClInclude Include="Header Files\Misc\StopWatch.h" />
-    <ClInclude Include="Header Files\Scripting\BehaviourSystem.h" />
     <ClInclude Include="Header Files\Rendering\System\DeferredPipeline.h" />
     <ClInclude Include="Header Files\Rendering\System\LightSystem.h" />
     <ClInclude Include="Header Files\Rendering\System\RenderingSystem.h" />
+    <ClInclude Include="Header Files\Rendering\System\SceneTransformManager.h" />
     <ClInclude Include="Header Files\Rendering\System\ShaderRenderPipeline.h" />
     <ClInclude Include="Header Files\Rendering\System\ShadowFBO.h" />
     <ClInclude Include="Header Files\Rendering\System\TiledRenderer.h" />
-    <ClInclude Include="Header Files\Physics\System\RigidBodySystem.h" />
     <ClInclude Include="Header Files\Rendering\Texture.h" />
-    <ClInclude Include="Header Files\Components\Rendering\Transform.h" />
-    <ClInclude Include="Header Files\Core\Window.h" />
-    <ClInclude Include="Header Files\Misc\temp.h" />
+    <ClInclude Include="Header Files\Scripting\BehaviourSystem.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source Files\Components\Components.cpp" />
-    <ClCompile Include="Source Files\Rendering\DepthFrameBuffer.cpp" />
-    <ClCompile Include="Header Files\Rendering\System\SceneTransformManager.h" />
     <ClCompile Include="Source Files\Assets\Asset.cpp" />
     <ClCompile Include="Source Files\Assets\AssetArray.cpp" />
     <ClCompile Include="Source Files\Assets\AssetManager.cpp" />
     <ClCompile Include="Source Files\Assets\ShaderManager.cpp" />
     <ClCompile Include="Source Files\Components\Behaviour.cpp" />
+    <ClCompile Include="Source Files\Components\Components.cpp" />
+    <ClCompile Include="Source Files\Components\EntityDescriptor.cpp" />
+    <ClCompile Include="Source Files\Components\Lights.cpp" />
+    <ClCompile Include="Source Files\Components\Material.cpp" />
+    <ClCompile Include="Source Files\Components\Mesh.cpp" />
+    <ClCompile Include="Source Files\Core\Editor\EditorUI.cpp" />
+    <ClCompile Include="Source Files\Core\Editor\EntityDescriptionSystem.cpp" />
+    <ClCompile Include="Source Files\Core\Input.cpp" />
+    <ClCompile Include="Source Files\Core\Scene.cpp" />
+    <ClCompile Include="Source Files\Core\Window.cpp" />
+    <ClCompile Include="Source Files\Log\Log.cpp" />
+    <ClCompile Include="Source Files\Math\EngineMathConstants.cpp" />
+    <ClCompile Include="Source Files\Math\Quaternion.cpp" />
+    <ClCompile Include="Source Files\Math\Transform.cpp" />
+    <ClCompile Include="Source Files\Physics\Physics.cpp" />
+    <ClCompile Include="Source Files\Physics\RigidBody3D.cpp" />
+    <ClCompile Include="Source Files\Physics\System\RigidBodySystem.cpp" />
     <ClCompile Include="Source Files\Rendering\Camera.cpp" />
     <ClCompile Include="Source Files\Rendering\DeferedRendererFragmentBuffer.cpp" />
     <ClCompile Include="Source Files\Rendering\DisplacementMap.cpp" />
-    <ClCompile Include="Source Files\Editor\EditorUI.cpp" />
-    <ClCompile Include="Source Files\Core\Scene.cpp" />
-    <ClCompile Include="Source Files\Math\EngineMathConstants.cpp" />
     <ClCompile Include="Source Files\Rendering\FrameBuffer.cpp" />
-    <ClCompile Include="Source Files\Core\Input.cpp" />
-    <ClCompile Include="Source Files\Components\Lights.cpp" />
-    <ClCompile Include="Source Files\Log\Log.cpp" />
-    <ClCompile Include="Source Files\Components\Material.cpp" />
-    <ClCompile Include="Source Files\Math\Quaternion.cpp" />
-    <ClCompile Include="Source Files\Math\Transform.cpp" />
-    <ClCompile Include="Source Files\Components\Mesh.cpp" />
     <ClCompile Include="Source Files\Rendering\MeshInstance.cpp" />
     <ClCompile Include="Source Files\Rendering\Model.cpp" />
-    <ClCompile Include="Source Files\Physics\Physics.cpp" />
-    <ClCompile Include="Source Files\Physics\RigidBody3D.cpp" />
     <ClCompile Include="Source Files\Rendering\Shader.cpp" />
-    <ClCompile Include="Source Files\Scripting\BehaviourSystem.cpp" />
+    <ClCompile Include="Source Files\Rendering\System\BuiltInShaderPipelines\DeferredPipeline.cpp" />
+    <ClCompile Include="Source Files\Rendering\System\DepthFrameBuffer.cpp" />
     <ClCompile Include="Source Files\Rendering\System\LightSystem.cpp" />
     <ClCompile Include="Source Files\Rendering\System\RenderingSystem.cpp" />
-    <ClCompile Include="Source Files\Rendering\System\BuiltInShaderPipelines\DeferredPipeline.cpp" />
     <ClCompile Include="Source Files\Rendering\System\ShaderRenderPipeline.cpp" />
     <ClCompile Include="Source Files\Rendering\System\ShadowFBO.cpp" />
     <ClCompile Include="Source Files\Rendering\System\TiledRenderer.cpp" />
-    <ClCompile Include="Source Files\Physics\System\RigidBodySystem.cpp" />
     <ClCompile Include="Source Files\Rendering\Texture.cpp" />
-    <ClCompile Include="Source Files\Core\Window.cpp" />
+    <ClCompile Include="Source Files\Scripting\BehaviourSystem.cpp" />
     <ClCompile Include="Source Files\misc\StopWatch.cpp" />
-    <ClCompile Include="Source Files\stb_image.cpp" />
     <ClCompile Include="Source Files\misc\temp.cpp" />
+    <ClCompile Include="Source Files\stb_image.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
