--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ bld/
 [Ll]ogs/
 !AkameCore/Header Files/Core/Log
 !AkameCore/Source Files/Log
+!Assets
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
