--- a/AkameCore/AkameCore.vcxproj
+++ b/AkameCore/AkameCore.vcxproj
@@ -107,6 +107,7 @@
     <ClInclude Include="Header Files\Components\Rendering\Material.h" />
     <ClInclude Include="Header Files\Components\Rendering\Mesh.h" />
     <ClInclude Include="Header Files\Components\Rendering\Transform.h" />
+    <ClInclude Include="Header Files\Core\Debug\Debug.h" />
     <ClInclude Include="Header Files\Core\Editor\EditorUI.h" />
     <ClInclude Include="Header Files\Core\Editor\EntityDescriptionSystem.h" />
     <ClInclude Include="Header Files\Core\Engine.h" />
@@ -153,6 +154,7 @@
     <ClCompile Include="Source Files\Components\Lights.cpp" />
     <ClCompile Include="Source Files\Components\Material.cpp" />
     <ClCompile Include="Source Files\Components\Mesh.cpp" />
+    <ClCompile Include="Source Files\Core\Debug\Debug.cpp" />
     <ClCompile Include="Source Files\Core\Editor\EditorUI.cpp" />
     <ClCompile Include="Source Files\Core\Editor\EntityDescriptionSystem.cpp" />
     <ClCompile Include="Source Files\Core\Input.cpp" />
