--- a/ECS/ECS.vcxproj
+++ b/ECS/ECS.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="HeaderFiles\ComponentManager.h" />
     <ClInclude Include="HeaderFiles\ECS.h" />
     <ClInclude Include="HeaderFiles\ECSTYPES.h" />
+    <ClInclude Include="HeaderFiles\ecVector.h" />
     <ClInclude Include="HeaderFiles\System.h" />
     <ClInclude Include="HeaderFiles\SystemManager.h" />
   </ItemGroup>
