--- a/AkameCore/AkameCore.vcxproj
+++ b/AkameCore/AkameCore.vcxproj
@@ -94,10 +94,13 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Header Files\Animation\SkeletalMeshRenderingSystem.h" />
     <ClInclude Include="Header Files\Assets\Asset.h" />
     <ClInclude Include="Header Files\Assets\AssetArray.h" />
     <ClInclude Include="Header Files\Assets\AssetManager.h" />
     <ClInclude Include="Header Files\Assets\ShaderManager.h" />
+    <ClInclude Include="Header Files\Components\Animation\AnimationController.h" />
+    <ClInclude Include="Header Files\Components\Animation\SkeletalMesh.h" />
     <ClInclude Include="Header Files\Components\Behaviour\Behaviour.h" />
     <ClInclude Include="Header Files\Components\Behaviour\BehaviourComponent.h" />
     <ClInclude Include="Header Files\Components\Components.h" />
@@ -143,18 +146,23 @@
     <ClInclude Include="Header Files\Rendering\System\TiledRenderer.h" />
     <ClInclude Include="Header Files\Rendering\Texture.h" />
     <ClInclude Include="Header Files\Scripting\BehaviourSystem.h" />
+    <ClInclude Include="Header Files\Animation\AnimationControllerSystem.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp" />
+    <ClCompile Include="Source Files\Animation\SkeletalMeshRenderingSystem.cpp" />
     <ClCompile Include="Source Files\Assets\Asset.cpp" />
     <ClCompile Include="Source Files\Assets\AssetArray.cpp" />
     <ClCompile Include="Source Files\Assets\AssetManager.cpp" />
     <ClCompile Include="Source Files\Assets\ShaderManager.cpp" />
+    <ClCompile Include="Source Files\Components\AnimationController.cpp" />
     <ClCompile Include="Source Files\Components\Behaviour.cpp" />
     <ClCompile Include="Source Files\Components\Components.cpp" />
     <ClCompile Include="Source Files\Components\EntityDescriptor.cpp" />
     <ClCompile Include="Source Files\Components\Lights.cpp" />
     <ClCompile Include="Source Files\Components\Material.cpp" />
     <ClCompile Include="Source Files\Components\Mesh.cpp" />
+    <ClCompile Include="Source Files\Components\SkeletalMesh.cpp" />
     <ClCompile Include="Source Files\Core\Debug\Debug.cpp" />
     <ClCompile Include="Source Files\Core\Editor\EditorUI.cpp" />
     <ClCompile Include="Source Files\Core\Editor\EntityDescriptionSystem.cpp" />
