--- a/AkameCore/AkameCore.vcxproj
+++ b/AkameCore/AkameCore.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="Header Files\Rendering\System\TiledRenderer.h" />
     <ClInclude Include="Header Files\Rendering\Texture.h" />
     <ClInclude Include="Header Files\Scripting\BehaviourSystem.h" />
+    <ClInclude Include="Header Files\Core\Editor\SceneHierarchyWindow\SceneHierarchyWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Header Files\Rendering\Animation\SkinnedRendererPipeline.cpp" />
@@ -169,6 +170,7 @@
     <ClCompile Include="Source Files\Core\Debug\Debug.cpp" />
     <ClCompile Include="Source Files\Core\Editor\EditorUI.cpp" />
     <ClCompile Include="Source Files\Core\Editor\EntityDescriptionSystem.cpp" />
+    <ClCompile Include="Source Files\Core\Editor\SceneHierarchyWindow.cpp" />
     <ClCompile Include="Source Files\Core\Input.cpp" />
     <ClCompile Include="Source Files\Core\Scene.cpp" />
     <ClCompile Include="Source Files\Core\Window.cpp" />
