relocated misplaced files

--- a/AkameCore/AkameCore.vcxproj
+++ b/AkameCore/AkameCore.vcxproj
@@ -128,8 +128,8 @@
     <ClInclude Include="Header Files\Physics\ColliderShape.h" />
     <ClInclude Include="Header Files\Physics\Physics.h" />
     <ClInclude Include="Header Files\Physics\System\RigidBodySystem.h" />
-    <ClInclude Include="Header Files\Rendering\Animation\SkinnedMeshRenderer.h" />
-    <ClInclude Include="Header Files\Rendering\Animation\SkinnedRendererPipeline.h" />
+    <ClInclude Include="Header Files\Components\Animation\SkinnedMeshRenderer.h" />
+    <ClInclude Include="Header Files\Animation\SkinnedRendererPipeline.h" />
     <ClInclude Include="Header Files\Rendering\Camera.h" />
     <ClInclude Include="Header Files\Rendering\DeferredRendererFragmentBuffer.h" />
     <ClInclude Include="Header Files\Rendering\DepthFrameBuffer.h" />
