--- a/AkameCore/AkameCore.vcxproj.filters
+++ b/AkameCore/AkameCore.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Header Files\Core\Editor">
       <UniqueIdentifier>{2FB3954D-1BD8-E4CD-4423-CA5D30A7E3EB}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Core\Editor\SceneHierarchyWindow">
+      <UniqueIdentifier>{434E4599-AFBE-4712-78DD-C19AE40C8013}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Header Files\Core\Log">
       <UniqueIdentifier>{6AA8D402-D614-90FD-9F08-285B0B34B265}</UniqueIdentifier>
     </Filter>
@@ -54,9 +57,6 @@
     </Filter>
     <Filter Include="Header Files\Rendering">
       <UniqueIdentifier>{AED1C9C3-9ACB-F215-8338-89266FD15882}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Rendering\Animation">
-      <UniqueIdentifier>{1DFCDA95-094D-C6D7-32B1-B4991E615941}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\Rendering\System">
       <UniqueIdentifier>{02558FC7-6E6D-76F1-371A-068BA3F10A8B}</UniqueIdentifier>
@@ -120,6 +120,9 @@
     <ClInclude Include="Header Files\Animation\SkeletalMeshRenderingSystem.h">
       <Filter>Header Files\Animation</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\Animation\SkinnedRendererPipeline.h">
+      <Filter>Header Files\Animation</Filter>
+    </ClInclude>
     <ClInclude Include="Header Files\Assets\Asset.h">
       <Filter>Header Files\Assets</Filter>
     </ClInclude>
@@ -174,6 +177,9 @@
     <ClInclude Include="Header Files\Core\Editor\EntityDescriptionSystem.h">
       <Filter>Header Files\Core\Editor</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\Core\Editor\SceneHierarchyWindow\SceneHierarchyWindow.h">
+      <Filter>Header Files\Core\Editor\SceneHierarchyWindow</Filter>
+    </ClInclude>
     <ClInclude Include="Header Files\Core\Engine.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
@@ -215,12 +221,6 @@
     </ClInclude>
     <ClInclude Include="Header Files\Physics\System\RigidBodySystem.h">
       <Filter>Header Files\Physics\System</Filter>
-    </ClInclude>
-    <ClInclude Include="Header Files\Components\Animation\SkinnedMeshRenderer.h">
-      <Filter>Header Files\Rendering\Animation</Filter>
-    </ClInclude>
-    <ClInclude Include="Header Files\Animation\SkinnedRendererPipeline.h">
-      <Filter>Header Files\Rendering\Animation</Filter>
     </ClInclude>
     <ClInclude Include="Header Files\Rendering\Camera.h">
       <Filter>Header Files\Rendering</Filter>
@@ -279,13 +279,15 @@
     <ClInclude Include="Header Files\Scripting\BehaviourSystem.h">
       <Filter>Header Files\Scripting</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Core\Editor\SceneHierarchyWindow\SceneHierarchyWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp">
       <Filter>Source Files\Animation</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Animation\SkeletalMeshRenderingSystem.cpp">
+      <Filter>Source Files\Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Animation\SkinnedRendererPipeline.cpp">
       <Filter>Source Files\Animation</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Assets\Asset.cpp">
@@ -331,6 +333,9 @@
       <Filter>Source Files\Core\Editor</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Core\Editor\EntityDescriptionSystem.cpp">
+      <Filter>Source Files\Core\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Core\Editor\SceneHierarchyWindow.cpp">
       <Filter>Source Files\Core\Editor</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Core\Input.cpp">
@@ -429,8 +434,5 @@
     <ClCompile Include="Source Files\stb_image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Header Files\Rendering\Animation\SkinnedRendererPipeline.cpp" />
-    <ClCompile Include="Source Files\Core\Editor\SceneHierarchyWindow.cpp" />
-    <ClCompile Include="Source Files\Animation\SkinnedRendererPipeline.cpp" />
   </ItemGroup>
 </Project>
